--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="en">
     <title>Website Title</title>
   </head>
   <body>
