--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Website Title</title>
   </head>
   <body>
-    <!-- This is a comment! -->
+    <!-- This is a comment! :D -->
   </body>
 </html>
